t/batch/directives/invalid/expected/004-unclose-triplequote.pattern
ValueError: line 2: unclosed triple quote: --job-name='''It's a "job"
